Fix jumping on focus

--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -170,7 +170,7 @@
 
   &:not(:focus),
   &:not(:focus-within) {
-    border: none;
+    border-color: transparent;
   }
 
   --icon-size: 1.5rem;
